[package]
name = "raywatch"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
toml = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
solana-client = "2.3.7"
solana-sdk = "2.3.1"
futures = "0.3.31"
serde_json = "1.0.142"
chrono = "0.4.41"
reqwest = "0.12.22"
async-recursion = "1.1.1"
